kubernetes-networks/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
  namespace: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        homework: "true"
      volumes:
      - name: shared-volume
        emptyDir: {}
      - name: nginx-default-config-volume
        configMap:
          name: nginx-default-config-homework
      terminationGracePeriodSeconds: 4
      containers:
      - name: nginx
        image: nginx:1.14.2
        volumeMounts:
          - mountPath: /homework
            name: shared-volume
          - name: nginx-default-config-volume
            mountPath: /etc/nginx/conf.d/
        ports:
          - containerPort: 8000
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -f /homework"]
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 1
